update HangTrongKho on ShoeAdmin and backend

--- a/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.css
+++ b/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.css
@@ -7,3 +7,9 @@
     padding : 1.25rem;
     background-color:  white;
   }
+
+.form-group .box-size{
+  border: 1px solid black;
+  text-align: center;
+  margin: 3px;
+}
