--- a/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
@@ -1,10 +1,17 @@
 <div class="content-wrapper">
   <!-- Basic Carousel start -->
   <section id="basic-carousel">
+
     <div class="row">
       <div class="col-sm-12 mt-2">
         <div class="content-header">Thông tin chi tiết sản phẩm</div>
       </div>
+      <button (click)="goHangTrongKho(chitietSp.id)" type="button" class="btn btn-raised btn-raised btn-primary btnKho">
+        Kho hàng
+      </button>
+    </div>
+
+    <div class="row">
 
       <div class="col-md-6">
         <div class="card">
@@ -15,56 +22,74 @@
                   <h4 class="form-section">
                     <i class="ft-user"></i> Mã sản phẩm: {{ chitietSp.id }}</h4>
                   <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-12">
                       <div class="form-group">
                         <label for="projectinput1">Tên sản phẩm:</label>
-                        <input type="text" id="projectinput2" class="form-control"  name="lname" value="{{chitietSp.tenSanPham}}">
+                        <input type="text" id="projectinput2" class="form-control" name="lname" value="{{chitietSp.tenSanPham}}">
                       </div>
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-12">
                       <div class="form-group">
                         <label for="projectinput3">Loại giày:</label>
                         <input type="text" id="projectinput3" class="form-control" name="email" value="{{chitietSp.loaiGiay.tenLoai}}">
                       </div>
                     </div>
-                   
+
                   </div>
                   <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-12">
                       <div class="form-group">
                         <label for="projectinput3">Đơn giá:</label>
                         <input type="text" id="projectinput3" class="form-control" name="email" value="{{chitietSp.donGia}}">
                       </div>
                     </div>
-                   
+
                   </div>
                   <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-12">
                       <div class="form-group">
                         <label for="projectinput3">Chiết khấu:</label>
                         <input type="text" id="projectinput3" class="form-control" name="email" value="{{chitietSp.chietKhau}}">
                       </div>
                     </div>
-                   
+
                   </div>
                   <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-12">
                       <div class="form-group">
                         <label for="projectinput4">Kích thước</label>
                         <br>
-                        <span class="box-size" *ngFor="let size of chitietSp.hangTrongKho">{{ size.kichThuoc.tenKichThuoc }} &nbsp;</span>
-                        <button (click)="goHangTrongKho(chitietSp.id)" type="button" class="btn btn-raised btn-raised btn-primary">
-                          Kho hàng
+                        <div class="box text-center" *ngFor="let size of chitietSp.hangTrongKho">
+                          <span class="box-size">{{ size.kichThuoc.tenKichThuoc }} &nbsp;</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="form-group">
+                        <label for="projectinput8">Mô tả</label>
+                        <textarea id="projectinput8" rows="5" class="form-control" name="comment"> {{chitietSp.chiTiet}}</textarea>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="form-actions text-center">
+                        <button type="button" class="btn btn-raised btn-raised btn-warning">
+                          <i class="ft-x"></i> Cancel
+                        </button>
+                        <button type="button" class="btn btn-raised btn-raised btn-primary">
+                          <i class="fa fa-check-square-o"></i> Save
                         </button>
                       </div>
                     </div>
                   </div>
-                  <div class="form-group">
-                    <label for="projectinput8">Mô tả</label>
-                    <textarea id="projectinput8" rows="5" class="form-control" name="comment"> {{chitietSp.chiTiet}}</textarea>
-                  </div>
+
                 </div>
 
               </form>
@@ -72,6 +97,8 @@
           </div>
         </div>
       </div>
+
+
 
       <div class="col-md-6">
         <div class="card">
@@ -83,56 +110,49 @@
                   <h4 class="form-section">
                     <i class="ft-info"></i> Hình ảnh</h4>
                   <div class="row">
-                      <label class="col-md-3 label-control">Chọn ảnh:</label>
-                      <div class="col-md-6">
-                        <label id="projectinput8" class="file center-block">
-                          <input type="file" id="file">
-                          <span class="file-custom"></span>
-                        </label>
-                      </div>
+                    <label class="col-md-4 label-control">Chọn ảnh:</label>
+                    <div class="col-md-8">
+                      <label id="projectinput8" class="file center-block">
+                        <input type="file" id="file">
+                        <span class="file-custom"></span>
+                      </label>
+                    </div>
                   </div>
                 </div>
-                        <div id="carousel-keyboard" class="carousel slide" data-ride="carousel" data-keyboard="false">
-                          <ol class="carousel-indicators">
-                            <li data-target="#carousel-keyboard" data-slide-to="0" class="active"></li>
-                            <li data-target="#carousel-keyboard" data-slide-to="1"></li>
-                            <li data-target="#carousel-keyboard" data-slide-to="2"></li>
-                          </ol>
-                          <div class="carousel-inner" role="listbox">
-                            <div class="carousel-item active">
-                              <img src="{{chitietSp.hinhSanPham[0].hinh}}" alt="First slide">
-                            </div>
-                            <div class="carousel-item">
-                              <img src="{{chitietSp.hinhSanPham[1].hinh}}" alt="Second slide">
-                            </div>
-                            <div class="carousel-item">
-                              <img src="{{chitietSp.hinhSanPham[2].hinh}}" alt="Third slide">
-                            </div>
-                          </div>
-                          <a class="carousel-control-prev" href="#carousel-keyboard" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                          </a>
-                          <a class="carousel-control-next" href="#carousel-keyboard" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                          </a>
+                <div id="carousel-keyboard" class="carousel slide" data-ride="carousel" data-keyboard="false">
+                  <ol class="carousel-indicators">
+                    <li data-target="#carousel-keyboard" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-keyboard" data-slide-to="1"></li>
+                    <li data-target="#carousel-keyboard" data-slide-to="2"></li>
+                  </ol>
+                  <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                      <img src="{{chitietSp.hinhSanPham[0].hinh}}" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="{{chitietSp.hinhSanPham[1].hinh}}" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="{{chitietSp.hinhSanPham[2].hinh}}" alt="Third slide">
+                    </div>
                   </div>
+                  <a class="carousel-control-prev" href="#carousel-keyboard" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#carousel-keyboard" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </div>
               </form>
             </div>
           </div>
         </div>
       </div>
+
     </div>
-    <br>
-    <div class="form-actions center">
-      <button type="button" class="btn btn-raised btn-raised btn-warning">
-        <i class="ft-x"></i> Cancel
-      </button>
-      <button type="button" class="btn btn-raised btn-raised btn-primary">
-        <i class="fa fa-check-square-o"></i> Save
-      </button>
-    </div>
+
   </section>
 
 </div>
