--- a/ShoesAdmin/src/app/components/chitietkhohang/chitietkhohang.component.html
+++ b/ShoesAdmin/src/app/components/chitietkhohang/chitietkhohang.component.html
@@ -1,11 +1,15 @@
 <div class="content-wrapper">
   <!-- Basic Carousel start -->
   <section id="basic-carousel">
+
     <div class="row">
       <div class="col-sm-12 mt-2">
         <div class="content-header">Hàng trong kho</div>
       </div>
+    </div>
 
+    <div class="row">
+      <!-- LEFT -->
       <div class="col-md-6">
         <div class="card">
           <div class="card-body">
@@ -14,33 +18,58 @@
                 <div class="form-body">
                   <h4 class="form-section">
                     <i class="ft-user"></i>Kho hàng sản phẩm</h4>
+
                   <div class="row">
-                    <div class="col-md-6">
-                      <div class="form-group">
-                        <label for="projectinput1">Mã sản phẩm</label>:
-                        <label>{{ chitietSp.id }}</label>
-                        <br>
-                        <br>
-                        <label for="projectinput1">Tên sản phẩm</label>:
-                        <label>{{ chitietSp.tenSanPham }}</label>
-                        <br>
-                        <br>
-                        <label for="projectinput1">Đơn giá</label>:
-                        <label>{{ chitietSp.donGia | number }} VNĐ</label>
-                        <br>
-                        <br>
-                        <label for="projectinput1">Chiết khấu</label>:
-                        <label>{{ chitietSp.chietKhau * 100 }}%</label>
+                    <div class="col-md-12" *ngIf="chitietSp != null">
+
+                      <div class="row">
+                        <div class="col-md-12">
+                          <div class="form-group">
+                            <label for="projectinput1">Mã sản phẩm: </label>
+                            <input type="text" id="projectinput2" class="form-control" value="{{ chitietSp.id }}">
+                          </div>
+                        </div>
                       </div>
+
+                      <div class="row">
+                        <div class="col-md-12">
+                          <div class="form-group">
+                            <label for="projectinput1">Tên sản phẩm: </label>
+                            <input type="text" id="projectinput2" class="form-control" value="{{ chitietSp.tenSanPham }}">
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="row">
+                        <div class="col-md-12">
+                          <div class="form-group">
+                            <label for="projectinput1">Đơn giá: </label>
+                            <input type="text" id="projectinput2" class="form-control" value="{{ chitietSp.donGia | number }} VNĐ">
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="row">
+                        <div class="col-md-12">
+                          <div class="form-group">
+                            <label for="projectinput1">Chiết khấu: </label>
+                            <input type="text" id="projectinput2" class="form-control" value="{{ chitietSp.chietKhau * 100 }}%">
+                          </div>
+                        </div>
+                      </div>
+
                     </div>
                   </div>
+
                 </div>
               </form>
             </div>
           </div>
         </div>
       </div>
+      <!-- LEFT -->
 
+      <!-- RIGHT -->
       <div class="col-md-6">
         <div class="card">
           <div class="card-body">
@@ -49,12 +78,13 @@
               <form class="form">
                 <div class="form-body">
                   <h4 class="form-section">
-                    <i class="ft-info"></i> Số lượng sản phẩm</h4>
-                  <div class="row">
-                  </div>
+                    <i class="ft-info"></i>
+                    Số lượng sản phẩm
+                  </h4>
                 </div>
+
                 <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-md-5">
                     <div class="form-group">
                       <label for="projectinput5">Chọn size</label>
                       <select (change)="onChange($event.target.value)" id="size" name="interested" class="form-control">
@@ -63,20 +93,22 @@
                       </select>
                     </div>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-md-5">
                     <div class="form-group">
                       <label for="projectinput4">Số lượng</label>
                       <input *ngIf="chk ? 'disabled' : ''" [(ngModel)]='soLuong' type="text" id="soluong" class="form-control" name="phone">
                     </div>
                   </div>
-                  <div class="form-group">
-                    <button type="button" (click)="addSize()" class="btn btn-raised btn-danger mr-1">+</button>
+                  <div class="col-md-2">
+                    <div class="form-group">
+                      <button type="button" (click)="addSize()" class="btn btn-raised btn-danger mr-1">+</button>
+                    </div>
                   </div>
                 </div>
+
                 <table id="table_sp" class="table table-responsive-md-md text-center">
                   <thead>
                     <tr>
-                      <!-- <th></th> -->
                       <th>STT</th>
                       <th>Kích thước</th>
                       <th>Số lượng</th>
@@ -110,8 +142,9 @@
           </div>
         </div>
       </div>
-    </div>
-    <br>
-  </section>
+      <!-- RIGHT -->
 
+    </div>
+
+  </section>
 </div>
