--- a/ShoesAdmin/src/app/components/chitietkhohang/chitietkhohang.component.html
+++ b/ShoesAdmin/src/app/components/chitietkhohang/chitietkhohang.component.html
@@ -129,11 +129,11 @@
                   </tbody>
                 </table>
                 <div class="form-actions right">
-                  <button type="button" class="btn btn-raised btn-raised btn-warning mr-1">
-                    <i class="ft-x"></i> Cancel
+                  <button type="button" class="btn btn-raised btn-raised btn-warning mr-1" routerLink="/sanpham">
+                    <i class="ft-corner-up-left"></i> Quay lại
                   </button>
                   <button (click)="saveHangTrongKho()" type="button" class="btn btn-raised btn-raised btn-primary">
-                    <i class="fa fa-check-square-o"></i> Save
+                    <i class="fa fa-check-square-o"></i> Lưu
                   </button>
                 </div>
               </form>
