--- a/ShoesAdmin/src/app/components/form-sanpham/form-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/form-sanpham/form-sanpham.component.html
@@ -101,10 +101,10 @@
 
                 <div class="form-actions center">
                   <button type="button" class="btn btn-raised btn-warning mr-1">
-                    <i class="ft-x"></i> Cancel
+                    <i class="ft-corner-up-left"></i> Quay lại
                   </button>
                   <button type="button" class="btn btn-raised btn-primary">
-                    <i class="fa fa-check-square-o"></i> Save
+                    <i class="fa fa-check-square-o"></i> Lưu
                   </button>
                 </div>
               </form>
