--- a/ShoesAdmin/src/app/components/table-hoadon/table-hoadon.component.html
+++ b/ShoesAdmin/src/app/components/table-hoadon/table-hoadon.component.html
@@ -17,9 +17,9 @@
                             <table id="table_hd" class="table table-responsive-md-md text-center">
                                 <thead>
                                     <tr>
-                                        <th>No.ID</th>
-                                        <th>Tên khách hàng</th>
-                                        <th>Tên nhân viên</th>
+                                        <th>Mã Hóa Đơn</th>
+                                        <th>Tên Khách hàng</th>
+                                        <th>Tên Nhân viên</th>
                                         <th>Ngày</th>
                                         <th>Trạng Thái</th>
                                         <th>Tổng Tiền</th>
