--- a/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
@@ -15,18 +15,18 @@
                   <div class="card-body">
                       <div class="card-block">
                             <div class="mb-3"> 
-                            <a  class="btn btn-raised gradient-pomegranate white"[routerLink]= "['/table-sanpham/add']">
+                            <a  class="btn btn-raised gradient-pomegranate white"[routerLink]= "['/chitiet-sp']">
                                         Thêm sản phẩm mới
                                     </a> 
                                 </div>
                           <table id="table_sp" class="table table-responsive-md-md text-center">
                               <thead>
                                   <tr>
-                                      <th>No.ID</th>
-                                      <th>Name</th>
-                                      <th>Type</th>
-                                      <th>Image</th>
-                                      <th>Size</th>
+                                      <th>Mã Sản Phẩm</th>
+                                      <th>Tên Sản Phẩm</th>
+                                      <th>Loại Giày</th>
+                                      <th>Hình ảnh</th>
+                                      <th>Kích thước</th>
                                       <th>Chức năng</th>
                                   </tr>
                               </thead>
