--- a/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
@@ -80,11 +80,11 @@
                   <div class="row">
                     <div class="col-md-12">
                       <div class="form-actions text-center">
-                        <button type="button" class="btn btn-raised btn-raised btn-warning">
-                          <i class="ft-x"></i> Cancel
+                        <button type="button" class="btn btn-raised btn-raised btn-warning" routerLink="/sanpham">
+                          <i class="ft-corner-up-left" ></i> Quay lại
                         </button>
                         <button type="button" class="btn btn-raised btn-raised btn-primary">
-                          <i class="fa fa-check-square-o"></i> Save
+                          <i class="fa fa-check-square-o"></i> Lưu
                         </button>
                       </div>
                     </div>
