--- a/ShoesAdmin/src/app/components/form-user/form-user.component.html
+++ b/ShoesAdmin/src/app/components/form-user/form-user.component.html
@@ -94,11 +94,11 @@
                                 </div>
 
                                 <div class="form-actions center">
-                                    <button type="button" class="btn btn-raised btn-warning mr-1">
-                                        <i class="ft-x"></i> Cancel
+                                    <button type="button" class="btn btn-raised btn-warning mr-1" routerLink="/nhanvien">
+                                        <i class="ft-corner-up-left"></i> Quay lại
                                     </button>
                                     <button type="button" class="btn btn-raised btn-primary">
-                                        <i class="fa fa-check-square-o"></i> Save
+                                        <i class="fa fa-check-square-o"></i> Lưu
                                     </button>
                                 </div>
                             </form>
