--- a/ShoesAdmin/src/app/components/table-khachhang/table-khachhang.component.html
+++ b/ShoesAdmin/src/app/components/table-khachhang/table-khachhang.component.html
@@ -9,17 +9,17 @@
           </div>
           <div class="card-body collapse show">
             <div class="card-block">
-              <button id="addRow" class="btn btn-primary mb-2">
-                <i class="ft-plus"></i>&nbsp; Thêm mới</button>
+              <!-- <button id="addRow" class="btn btn-primary mb-2">
+                <i class="ft-plus"></i>&nbsp; Thêm mới</button> -->
               <table id="table_kh" class="table table-striped table-bordered add-rows">
                 <thead>
                   <tr>
-                    <th>No.ID</th>
-                    <th>Tên KH</th>
+                    <th>Mã Khách Hàng</th>
+                    <th>Tên Khách Hàng</th>
                     <th>Số điện thoại</th>
                     <th>Địa Chỉ</th>
                     <th>Email</th>
-                    <th>Chức năng</th>
+                    <!-- <th>Chức năng</th> -->
                   </tr>
                 </thead>
                 <tbody>
@@ -29,14 +29,14 @@
                     <td>{{kh.soDienThoai}}</td>
                     <td>{{kh.diaChi}}</td>
                     <td>{{kh.email}}</td>
-                    <td>
+                    <!-- <td>
                       <a class="success p-0" data-original-title="" title="Cập nhật">
                         <i class="ft-edit-2 font-medium-3 mr-2"></i>
                       </a>
                       <a class="danger p-0" data-original-title="" title="Xóa">
                         <i class="ft-x font-medium-3 mr-2"></i>
                       </a>
-                    </td>
+                    </td> -->
                   </tr>
                 </tbody>
               </table>
