--- a/ShoesAdmin/src/app/components/table-nhanvien/table-nhanvien.component.html
+++ b/ShoesAdmin/src/app/components/table-nhanvien/table-nhanvien.component.html
@@ -14,8 +14,8 @@
               <table id="table_nv" class="table table-striped table-bordered add-rows">
                 <thead>
                   <tr>
-                    <th>No.ID</th>
-                    <th>Tên KH</th>
+                    <th>Mã Nhân Viên</th>
+                    <th>Tên Nhân Viên</th>
                     <th>Giới Tính</th>
                     <th>Số điện thoại</th>
                     <th>Email</th>
