Update detail image, Table loaigiay

--- a/ShoesAdmin/src/app/components/chitietkhohang/chitietkhohang.component.html
+++ b/ShoesAdmin/src/app/components/chitietkhohang/chitietkhohang.component.html
@@ -26,7 +26,7 @@
                         <div class="col-md-12">
                           <div class="form-group">
                             <label for="projectinput1">Mã sản phẩm: </label>
-                            <input type="text" id="projectinput2" class="form-control" value="{{ chitietSp.id }}">
+                            <input type="text" id="projectinput2" class="form-control" value="{{ chitietSp.id }}" readonly>
                           </div>
                         </div>
                       </div>
