--- a/ShoesAdmin/src/app/components/index/index.component.html
+++ b/ShoesAdmin/src/app/components/index/index.component.html
@@ -76,6 +76,12 @@
                             <span data-i18n="" class="menu-title">Nhân Viên</span>
                         </a>
                     </li>
+                    <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                        <a [routerLink]="['loaigiay']">
+                            <i class="ft-file-text"></i>
+                            <span data-i18n="" class="menu-title">Loại Giày</span>
+                        </a>
+                    </li>
                     <!-- <li class="has-sub nav-item">
             <a>
               <i class="ft-copy"></i>
