--- a/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
@@ -119,32 +119,26 @@
                     </div>
                   </div>
                 </div>
-                <div id="carousel-keyboard" class="carousel slide" data-ride="carousel" data-keyboard="false">
-                  <ol class="carousel-indicators">
-                    <li data-target="#carousel-keyboard" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-keyboard" data-slide-to="1"></li>
-                    <li data-target="#carousel-keyboard" data-slide-to="2"></li>
-                  </ol>
-                  <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active">
-                      <img src="{{chitietSp.hinhSanPham[0].hinh}}" alt="First slide">
-                    </div>
-                    <div class="carousel-item">
-                      <img src="{{chitietSp.hinhSanPham[1].hinh}}" alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                      <img src="{{chitietSp.hinhSanPham[2].hinh}}" alt="Third slide">
-                    </div>
-                  </div>
-                  <a class="carousel-control-prev" href="#carousel-keyboard" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                  <a class="carousel-control-next" href="#carousel-keyboard" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                  </a>
-                </div>
+                <table id="table_sp" class="table table-responsive-md-md text-center">
+                  <thead>
+                    <tr>
+                      <th>STT</th>
+                      <th>Hình ảnh</th>
+                      <th>Chức năng</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let image of chitietSp.hinhSanPham">
+                      <td style="vertical-align: middle">{{ image.id }}</td>
+                      <td style="vertical-align: middle"><img src="{{image.hinh}}" width="100"></td>
+                      <td style="vertical-align: middle">
+                        <a class="danger p-0" data-original-title="" title="Xóa" id="confirm-cancel">
+                          <i (click)="delSize(size.kichThuocId)" class="ft-x font-medium-3 mr-2"></i>
+                        </a>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
               </form>
             </div>
           </div>
